--- a/client/main.html
+++ b/client/main.html
@@ -30,3 +30,6 @@
     <meta name="msapplication-square310x310logo" content="/favicons/mstile-310x310.png" />
     -->
 </head>
+<body>
+    <section id="webix-playground"></section>
+</body>
